@@ -38,8 +38,8 @@ public class AnswerController {
             model.addAttribute("question", question);
             return "question_detail";
         }
-        this.answerService.create(question, answerForm.getContent(), siteUser);
-        return String.format("redirect:/question/detail/%s", id);
+       Answer answer = answerService.create(question, answerForm.getContent(), siteUser);
+        return "redirect:/question/detail/%d#answer_%d".formatted(answer.getQuestion().getId(), answer.getId());
 
     }
 
@@ -73,8 +73,7 @@ public class AnswerController {
 
         answerService.modify(answer, answerForm.getContent());
 
-        return String.format("redirect:/question/detail/%s", answer.getQuestion().getId());
-
+        return "redirect:/question/detail/%d#answer_%d".formatted(answer.getQuestion().getId(), answer.getId());
     }
 
     @PreAuthorize("isAuthenticated()")
@@ -99,7 +98,7 @@ public class AnswerController {
         SiteUser siteUser = userService.getUser(principal.getName());
         answerService.vote(answer, siteUser);
 
-        return "redirect:/question/detail/%d".formatted(answer.getQuestion().getId());
+        return "redirect:/question/detail/%d#answer_%d".formatted(answer.getQuestion().getId(), answer.getId());
 
     }
 }
